--- a/people.css
+++ b/people.css
@@ -11,6 +11,7 @@ html,
 body {
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 main {
@@ -21,6 +22,10 @@ main {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 .innerBox {
@@ -54,7 +59,7 @@ main {
     position: absolute;
     bottom: 0;
     left: 0;
-    margin-bottom: .5vw;
+    margin-bottom: 1vw;
 }
 
 .dockbox {
