--- a/people.css
+++ b/people.css
@@ -225,7 +225,7 @@ body::-webkit-scrollbar{
     flex-grow: 1;
     background-color: #242424;
     border-radius: 15px;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
 }
@@ -269,7 +269,7 @@ body::-webkit-scrollbar{
     padding: 1vw 0.5vw;
     display: flex;
     align-items: center;
-    overflow: hidden; 
+    /* overflow: hidden;  */
     min-width: 0;
 }
 
